se retiraron imagenes sin uso junto con mejoras de flujo

--- a/src/app/business/pages/events-udi/events-udi.component.html
+++ b/src/app/business/pages/events-udi/events-udi.component.html
@@ -464,7 +464,7 @@
                                                         task.user.surnames
                                                 }}</b
                                             >
-                                            <p class="ml-auto task-description">
+                                            <p class="ml-auto mt-2 task-description">
                                                 {{ task.dateEnd }}
                                             </p>
                                         </div>
@@ -537,7 +537,7 @@
                                                         task.user.surnames
                                                 }}</b
                                             >
-                                            <p class="ml-auto task-description">
+                                            <p class="ml-auto mt-2 task-description">
                                                 {{ task.dateEnd }}
                                             </p>
                                         </div>
@@ -561,53 +561,6 @@
                     </div>
                 </div>
                 <div class="ml-2 mr-2 separator"></div>
-
-                <!--<div class=" col-12">
-                  <h5>Comentarios</h5>
-              </div>          
-              <div class="col-12 grid">
-                <div class="mb-4 w-full flex align-items-center">
-                  <p-avatar 
-                      label="G" 
-                      size="large" />
-                  <div class="ml-3 w-full">
-                    <form [formGroup]="commentsForm" style="width: inherit;">
-                      <span class="p-float-label">
-                          <textarea
-                              inputId="textarea"
-                              rows="3"
-                              style="width: 100%;"
-                              formControlName="comment"
-                              pInputTextarea 
-                              (keydown.enter)="addComment($event)"></textarea>
-                          <label for="textarea">Escribe tu comentario
-                              aquí...</label>
-                      </span>
-                  </form>
-                </div>
-               
-                
-            </div>
-            <div class=" col-12">
-              <div *ngFor="let comment of reversedComments" class="mb-4 flex align-items-center">
-                <p-avatar 
-                  [label]="getFirstLetter(comment.name)" 
-                  styleClass="ml-3" 
-                  size="large" />
-                <div class="ml-3 w-full">
-                  <div
-                    class="flex justify-content-between mb-2">
-                    <span class="block text-900">
-                      {{comment.name}}</span>
-                    <span class="block text-700">{{dateFormatService.formatTimeDifference(comment.date)}}</span>
-                  </div>
-                  <span
-                    class="block text-900 border-1 surface-ground surface-border p-2 border-round"
-                    style="word-break: break-all;">{{comment.content}}</span>
-                </div>
-              </div>
-            </div>
-          </div>-->
                 <app-comments
                     class="w-full"
                     [module]="module"
