se agregan mejoras

--- a/src/app/business/cross-components/comments/comments.component.html
+++ b/src/app/business/cross-components/comments/comments.component.html
@@ -13,7 +13,7 @@
                     <textarea
                         inputId="textarea"
                         rows="3"
-                        style="width: 100%"
+                        style="width: 100%; resize: none;"
                         formControlName="comment"
                         pInputTextarea
                         (keydown.enter)="addComment($event)"
