--- a/src/app/business/pages/dashboard/components/degree-process-cards/degree-process-cards.component.html
+++ b/src/app/business/pages/dashboard/components/degree-process-cards/degree-process-cards.component.html
@@ -8,7 +8,7 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3"> Inscripciones </span>
-                    <div class="text-900 font-medium text-xl">{{data.inscriptions.in_progress}}</div>
+                    <div class="text-900 font-medium text-xl">{{data.inscriptions.in_progress}} en proceso</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-blue-100 border-round"
@@ -33,7 +33,7 @@
             <div class="flex justify-content-between mb-3">
                 <div>
                     <span class="block text-500 font-medium mb-3">Asesorías</span>
-                    <div class="text-900 font-medium text-xl">{{data.advisories.in_progress}}</div>
+                    <div class="text-900 font-medium text-xl">{{data.advisories.in_progress}} en proceso</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-orange-100 border-round"
@@ -59,7 +59,7 @@
                     <span class="block text-500 font-medium mb-3"
                         >Revisión de tesis</span
                     >
-                    <div class="text-900 font-medium text-xl">{{data.reviews.in_progress}}</div>
+                    <div class="text-900 font-medium text-xl">{{data.reviews.in_progress}} en proceso</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-cyan-100 border-round"
@@ -85,7 +85,7 @@
                     <span class="block text-500 font-medium mb-3"
                         >Sustentación</span
                     >
-                    <div class="text-900 font-medium text-xl">{{data.presentations.in_progress}} </div>
+                    <div class="text-900 font-medium text-xl">{{data.presentations.in_progress}} en proceso</div>
                 </div>
                 <div
                     class="flex align-items-center justify-content-center bg-purple-100 border-round"
