se agrega fix para la edición de los comentarios

--- a/src/app/business/pages/events-udi/events-udi.component.html
+++ b/src/app/business/pages/events-udi/events-udi.component.html
@@ -1,5 +1,5 @@
 <p-toast key="tst"></p-toast>
-<div [ngClass]="{ 'd-none': showEventDetail }">
+<div  *ngIf="!showEventDetail">
     <div class="grid" #cardBody>
         <div class="col-12">
             <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
