--- a/src/app/layout/app.menu.component.html
+++ b/src/app/layout/app.menu.component.html
@@ -1,25 +1,39 @@
 <style>
-    .footer {
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-    }
+   .layout-wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
+}
+
+.layout-menu {
+    flex-grow: 1;
+    overflow-y: auto;
+}
+
+.footer {
+    position: relative;
+    bottom: 0;
+    text-align: center;
+    flex-shrink: 0;
+}
     ::ng-deep .active-route {
         background-color: #f9fafb;
     }
 </style>
-<ul class="layout-menu">
-    <ng-container *ngFor="let item of model; let i = index">
-        <li
-            app-menuitem
-            *ngIf="!item.separator"
-            [item]="item"
-            [index]="i"
-            [root]="true"
-        ></li>
-        <li *ngIf="item.separator" class="menu-separator"></li>
-    </ng-container>
-    <li class="footer">
+<div class="layout-wrapper">
+    <ul class="layout-menu">
+        <ng-container *ngFor="let item of model; let i = index">
+            <li
+                app-menuitem
+                *ngIf="!item.separator"
+                [item]="item"
+                [index]="i"
+                [root]="true"
+            ></li>
+            <li *ngIf="item.separator" class="menu-separator"></li>
+        </ng-container>
+    </ul>
+    <!-- <div class="footer">
         <div class="grid d-flex justify-content-center">
             <div class="col-4">
                 <p-avatar
@@ -32,5 +46,5 @@
                 <p>{{ getUserFullName() }}</p>
             </div>
         </div>
-    </li>
-</ul>
+    </div> -->
+</div>
