se añade funcion de similitud de titulo en el dashboard

--- a/src/app/business/pages/budget/budget.component.html
+++ b/src/app/business/pages/budget/budget.component.html
@@ -4,7 +4,7 @@
         <app-breadcrumb [items]="breadcrumbItems"></app-breadcrumb>
         <div class="card px-6 py-6">
             <div>
-                <h2>Registro de Gastos</h2>
+                <label style="font-size: 1.3rem;">Presupuesto de actividades operativas</label>
 
                 <p>
                     <label>Selecciona un Plan:</label>
