--- a/src/app/business/pages/thesis-review-tracking/thesis-review-tracking.component.html
+++ b/src/app/business/pages/thesis-review-tracking/thesis-review-tracking.component.html
@@ -47,7 +47,7 @@
                                 class="flex flex-column md:flex-row md:justify-content-between md:align-items-center"
                             >
                                 <h5 class="m-0">
-                                    Seguimiento de inscripciones
+                                    Seguimiento de revisiones de tesis
                                 </h5>
                                 <span
                                     class="block mt-2 md:mt-0 p-input-icon-left"
@@ -126,7 +126,7 @@
                                             [outlined]="true"
                                             severity="contrast"
                                             (click)="
-                                                viewDetailsInscription(data)
+                                                viewDetailsReview(data)
                                             "
                                         />
 
